[Add] 背景を動くように設定

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
 </head>
 <body>
-  <h1>トロッコアドベンチャー</h1>
+  <img class="buruburu bg-img" src="TruckAdventure.png">
 </body>
 </html>
